<resources>
    <string name="app_name">Project450</string>
    <string name="title_activity_home_">Home_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Project450</string>
    <string name="nav_header_subtitle">Sprint1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Chats">Chats</string>
    <string name="menu_Connection">Connection</string>
    <string name="menu_Setting">Setting</string>
    <string name="menu_Weather">Weather</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_switch_stay_logged_in">Remember Me</string>
    <string name="login_button_login">Log In</string>
    <string name="login_button_register">Create Account</string>

    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_nickname_hint">Nickname</string>
    <string name="register_button_register">Submit?</string>
    <string name="register_retype_password_hint">Confirm Password</string>


    <!--////////////// KEYS ////////// KEYS ///////// KEYS ///////// -->
    <string name="credentials_key">Crdntls ky </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
