<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_Chats" />
        <item
            android:id="@+id/nav_connections"
            android:icon="@drawable/ic_connect"
            android:title="@string/menu_Connection" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/menu_Weather" />
    </group>

    <item android:title="Setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/menu_Setting" />
        </menu>
    </item>

</menu>
